--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.NewNoteActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.NewNote"
+            android:windowSoftInputMode="stateVisible|adjustResize"/>
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
